--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -50,7 +50,7 @@ platform="Linux/X11"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.mozhubs"
 exclude_filter=""
 export_path=""
 encryption_include_filters=""
