--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,7 +5,7 @@ platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.mozhubs, *.mp3"
 exclude_filter=""
 export_path=""
 encryption_include_filters=""
